[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "respirax"
description = "JAX implementation of LISA response functions"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Michael J. Williams", email = "michaeljw1@googlemail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "numpy>=1.20.0",
    "typing-extensions>=4.0.0",
    "scipy",
    "h5py",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "numpy",
]
comparison = [
    "fastlisaresponse",
    "lisatools",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/mj-will/respirax"
Documentation = "https://github.com/mj-will/respirax#readme"
Repository = "https://github.com/mj-will/respirax"
Issues = "https://github.com/mj-will/respirax/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["respirax*"]

[tool.setuptools_scm]

[tool.setuptools.package-dir]
respirax = "src/respirax"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "comparison: tests that require fastlisaresponse for equivalence checking",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=respirax",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.ruff]
line-length = 79
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
extend-select = ["I"]
